examples/test/testpolicy6339.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6339
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key45: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value14
          key9: value25
          key32: value38
      podSelector:
        matchLabels:
          key39: value2
